hard-gists/11367287/run.log
=== Docker Run Log for 11367287 ===
Started at: Mi 29. Okt 11:55:57 CET 2025

[2025-10-29 11:55:58] START: Running container for 11367287
[2025-10-29 11:55:58] SUCCESS: Container fef73083aa34af6bfcb9e59aad970db0fc2238df5a49c5b74a982584782838a4 started for 11367287
=== Container logs for 11367287 ===
  File "/snippet.py", line 44
    print "move to end"
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 11367287 ===
[2025-10-29 11:56:00] INFO: Container fef73083aa34af6bfcb9e59aad970db0fc2238df5a49c5b74a982584782838a4 has stopped
